# language-decoder

./: .gitignore  LICENSE  Pipfile  README.md  __main__.py  build.py  build_portable.py  dictionaries.py  language_decoder.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
_data/: .desktop  config.yml  create_portable_env.py  run_main.bat  run_main.vbs  unblock.bat  version.rc
backend/: __main__.py  main.py
backend/config/: config.py  config.yml  const.py
backend/config/labels/: english.json
backend/decoder/: language_decoder.py  language_translator.py  neural_translator.py  normal_translator.py  pdf.py  prompt.txt  test_langslator.py  test_neural_trans.py
backend/dictionaries/: cleanup_dicts.py  dictionaries.py
backend/dicts/: dictionaries.py  dictonaries.py
backend/error/: error.py
backend/fonts/NotoMono/: LICENSE
backend/logger/: logger.py
backend/user_data/: cleanup_user_data.py  dictionaries.py  settings.py
backend/utils/: utilities.py
fonts/: NotoMono.pkl
frontend/: interface.py  iterface.py
frontend/pages/: decoding.py  dictionaries.py  page_abc.py  settings.py  start.py  ui_config.py  ui_custom.py  upload.py
frontend/pages/labels/: english.json
frontend/pages/ui/: config.py  custom.py  error.py  page_abc.py  state.py
frontend/pages/ui/labels/: deutsch.yml  english.json  english.yml
language_decoder/: __init__.py  dictionaries.py  language_decoder.py
