[project]
name = "LanguageDecoder"
requires-python = "==3.13.*"

dependencies = [
    "nicegui>=3.7.0,<4.0.0",
    "fastapi<1.0.0",
    "chardet>=5.0.0,<6.0.0",
    "urllib3>=2.6.3,<3.0.0",
    "fpdf2>=2.8.5,<3.0.0",
    "httpx<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "openai>=2.0.0,<3.0.0",
    "deep-translator>=1.0.0,<2.0.0",
    "requests>=2.32.4,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0,<7.0.0",
    "pywebview>=6.0.0,<7.0",
]

[tool.uv]
